gui/slick/css/style.css
/* ... */
.btn-inverse:hover,
.btn-inverse:active,
.btn-inverse.active,
.btn-inverse.disabled,
.btn-inverse[disabled]{
	background-color:#222;
	*background-color:#151515
}

.btn-inverse:active,
.btn-inverse.active{
	background-color:#080808 \9
}

.btn-inverse.btn.disabled,
.btn-inverse[disabled]{
	color:#444
}

.btn-xs{
	padding:1px 5px;
	font-size:12px;
	line-height:1.5;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	border-radius:3px
}

@media(min-width:768px){
	.navbar .nav > li > .dropdown-menu:after{
		position:absolute;
		top:-6px;
		right:12px;
		display:inline-block;
		border-right:6px solid transparent;
		border-bottom:6px solid #f5f1e4;
		border-left:6px solid transparent;
		content:""
	}
}

label{
	font-weight:normal
}

.label-container{
	display:inline-block;
	max-width:100%;
	margin-bottom:5px
}

pre{
	border:1px solid
}

.alert{
	padding:10px;
	text-align:center
}

/* =======================================================================
input sizing (for config pages)
========================================================================== */

#config select{
	min-width:0;
	width:auto;
	display:inline;
	margin-top:-4px
}

.btn-inline{
	margin-top:-2px
}

.input75{
	width:75px;
	margin-top:-4px
}

.input100{
	width:100px;
	margin-top:-4px
}

.input150{
	width:150px;
	margin-top:-4px
}

.input200{
	width:200px;
	margin-top:-4px
}

.input250{
	width:250px;
	margin-top:-4px
}

.input300{
	width:300px;
	margin-top:-4px
}

#config .input350,
.input350{
	width:350px;
	margin-top:-4px
}

.stepDiv.linefix .select,.stepDiv.linefix .btn-inline,.stepDiv.linefix .input75,.stepDiv.linefix .input100,.stepDiv.linefix .input150,.stepDiv.linefix .input200,.stepDiv.linefix .input250,.stepDiv.linefix .input300,.stepDiv.linefix .input350,
#config .linefix .select,#config .linefix .btn-inline,#config .linefix .input75,#config .linefix .input100,#config .linefix .input150,#config .linefix .input200,#config .linefix .input250,#config .linefix .input300,#config .linefix .input350{
	margin-top:0
}

.stepDiv.linefix input[type=radio],.stepDiv.linefix input[type=checkbox],
#config .linefix input[type=radio],#config .linefix input[type=checkbox]{
	margin-top:0.7em
}

.stepDiv.linefix input[type=button],
#config .linefix input[type=button]{
	margin-top:1px
}

/* =======================================================================
browser.css
========================================================================== */

#fileBrowserDialog{
	overflow-y:auto
}

#fileBrowserDialog ul{
	padding:0;
	margin:0
}

#fileBrowserDialog ul li{
	margin:2px 0;
	list-style-type:none;
	cursor:pointer
}

#fileBrowserDialog ul li a{
	display:block;
	padding:4px 0
}

#fileBrowserDialog ul li a:hover{
	color:#00f;
	background:none
}

#fileBrowserDialog ul li a span.ui-icon{
	float:left;
	margin:0 4px
}

#fileBrowserDialog h2{
	font-size:20px
}

.ui-autocomplete{
	max-height:180px;
	overflow-x:hidden;
	overflow-y:auto
}

/* IE6 hack since it doesn't support max-height */
* html .ui-autocomplete{
	height:180px;
	padding-right:20px
}

.ui-menu .ui-menu-item{
	background-color:#eee
}

.ui-menu .ui-menu-item-alternate{
	background-color:#ddd
}

.ui-autocomplete .ui-menu-item .ui-state-focus{
	color:#ddd;
	background:none;
	background-color:#0a246a
}

/* restore 1.8.x resize handle on dialog button pane */
.ui-dialog .ui-resizable-se{
	width:14px;
	height:14px;
	right:3px;
	bottom:3px;
	background-position:-80px -224px
}


/* =======================================================================
formWizard
========================================================================== */

fieldset.sectionwrap{
	padding:5px 0;
	text-align:left;
	border-width:0
}

.step-one #search-results legend.legendStep{
	margin-top:10px
}

.fullwidth,
.fullwidth div.stepsguide,
.fullwidth div.stepsguide .step{
	width:100%;
	cursor:default
}

div.stepsguide .step,
legend.legendStep{
	margin-bottom:0
}

legend.legendStep p{
	padding-left:15px
}

div.stepsguide{
	text-align:left;
	cursor:pointer
}

div.stepsguide .step{
	float:left;
	width:277px;
	font:bold 24px Arial
}

div.stepsguide .step p{
	margin:12px 0 0;
	border-bottom:5px solid
}

div.stepsguide .disabledstep p{
	border-bottom:2px solid
}

div.stepsguide .step .smalltext{
	font-size:13px;
	font-weight:normal
}

div.formpaginate{
	margin-top:1em;
	font-weight:bold;
	text-align:center
}

.step-outer{
	padding-top:10px;
	overflow:hidden
}

div.formpaginate .prev, div.formpaginate .next{
	padding:3px 6px;
	cursor:hand;
	cursor:pointer;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px
}

.stepDiv{
	padding:15px
}

#import-shows .stepDiv,
.step-three .stepDiv{
	padding:15px 0
}

#import-shows #addShowForm{
	width:861px
}

.step-three #custom-quality-wrapper{
	width:831px
}

#import-shows #addShowForm .stepDiv span.component-desc,
#addShowForm .step-three .stepDiv span.component-desc{
	width:639px
}

.stepDiv.parent-folder{
	padding:15px 0 0;
	width:430px;
	margin:0 auto
}

.stepDiv .nocheck{
	padding-left:16px
}

/* step 3 related */
#edit-show #custom-quality-wrapper #custom-quality,
#custom-quality{
	display:block;
	padding:0 0 10px 0;
	overflow:hidden;
	clear:both
}

#custom-quality-wrapper div.component-group-desc{
	float:left;
	width:172px;
	padding:0
}

#custom-quality-wrapper div.component-group-desc p{
	margin:.8em 0;
	font-size:1.2em
}

/* =======================================================================
tablesorter.css
========================================================================== */

.tablesorter,
#display-show .tablesorter{
	width:100%;
	margin-right:auto;
	margin-left:auto;
	color:#000;
/*	text-align:left;*/
/*	border-spacing:0*/
}

#display-show .tablesorter{
	background-color:transparent;
}

.tablesorter th,
.tablesorter td,
#tfoot{
	padding:4px;
	/*border-top:1px solid;*/
	/*border-left:1px solid;*/
	vertical-align:middle
}

#addRootDirTable.tablesorter td{
	vertical-align:baseline
}
/* ... */

